@@ -7,8 +7,11 @@ general:
         - write (command-line :) utility for easily generating large
 	  number of host entries, and to import interactively hosts
 	  from text files in standard zonefile format...
-	- add real VLAN support (vlan table)
 	- IPv6 support
+	- expiration date for accounts
+	- new access control methods:
+		- privilege levels
+		- IP-masks
 
 import:
 	- remove unneccessary (?) quoting (\"...) from dhcp (and other) records
@@ -25,10 +28,8 @@ sauron.cgi:
 	- fix timeout problem with huge zone/server deletes...(faster server :)
 	- add search by dhcp_date field...
 	- add quick search like in browser.cgi
-	- add "network settings" button to host display
         - add "show hosts" button to network entry display
 	- hide "VLAN" info from normal users
-	- add VLAN-table for managing "vlan"'s
 	- display conflicting domainname/MAC when host update/insert fails
 	
 
